--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,5 +1,7 @@
 @import './markdown.css';
 
+
+
 html,
 body,
 #app {
@@ -9,7 +11,7 @@ body,
 }
 
 html.dark {
-  background: #121212;
+  background: black;
 }
 
 #nprogress {
@@ -17,27 +19,37 @@ html.dark {
 }
 
 #nprogress .bar {
-  @apply bg-teal-600 opacity-75;
+  @apply bg-english-lavender opacity-75;
 
   position: fixed;
-  z-index: 1031;
+  z-index: 9999;
   top: 0;
   left: 0;
 
   width: 100%;
-  height: 2px;
+  height: 0.3rem;
 }
 
-.btn {
-  @apply px-4 py-1 rounded inline-block
-    bg-teal-600 text-white cursor-pointer
-    hover:bg-teal-700
-    disabled:cursor-default disabled:bg-gray-600 disabled:opacity-50;
+div {
+  @apply transition-colors duration-300 ease-in-out;
 }
+
+button,
+a,
+span,
+p,h1 {
+  @apply text-warm-gray-800 dark:text-warm-gray-300;
+    @apply transition-colors duration-300 ease-in-out;
+ }
 
 .icon-btn {
   @apply inline-block cursor-pointer select-none
-    opacity-75 transition duration-200 ease-in-out
-    hover:opacity-100 hover:text-teal-600;
-  font-size: 0.9em;
+    transition-all duration-300 ease-in-out
+  hover:text-english-lavender;
+}
+
+.text-btn {
+  @apply inline-block cursor-pointer select-none
+    transition-all duration-300 ease-in-out
+    hover:text-english-lavender;
 }
