--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,15 +1,34 @@
 @import './markdown.css';
 
+/* SCROLL STYLES */
+*::-webkit-scrollbar-track {
+   @apply bg-old-lavender rounded-none;
+}
+
+*::-webkit-scrollbar {
+   @apply w-2 lg:w-2.5 h-2 lg:h-2.5;
+}
+
+*::-webkit-scrollbar-thumb {
+   @apply bg-english-lavender  rounded-none;
+}
+
+input,
+select,
+textarea,
+button,
+th {
+   -ms-touch-action: none !important;
+   -webkit-tap-highlight-color: transparent !important;
+   outline-width: 0 !important;
+   outline: none !important;
+   touch-action: none !important;
+}
+
 html,
 body,
 #app {
-   height: 100%;
-   margin: 0;
-   padding: 0;
-}
-
-html.dark {
-   background: black;
+   @apply h-full p-0 m-0;
 }
 
 #nprogress {
@@ -18,50 +37,46 @@ html.dark {
 
 #nprogress .bar {
    @apply bg-english-lavender opacity-75;
-
-   position: fixed;
-   z-index: 9999;
-   top: 0;
-   left: 0;
-
-   width: 100%;
-   height: 0.3rem;
+   @apply fixed z-9999 top-0 left-0;
+   @apply w-full h-1.5;
 }
 
-th,
-td {
-   @apply transition-colors duration-300 ease-in-out;
+.text-theme {
+   @apply text-warm-gray-700 dark:text-warm-gray-300;
 }
 
-button,
-a,
-span,
-p,
-h1 {
-   @apply text-warm-gray-800 dark:text-warm-gray-300;
-   @apply transition-colors duration-300 ease-in-out;
+.text-theme-inverse {
+   @apply text-warm-gray-300 dark:text-warm-gray-800;
+}
+
+.main-theme-bg {
+   @apply bg-unbleached-silk dark:bg-jet;
+}
+
+.main-theme-bg-inverse {
+   @apply bg-jet dark:bg-unbleached-silk;
 }
 
 .icon-btn {
-   @apply inline-block cursor-pointer select-none
-    transition-all duration-300 ease-in-out
-  hover:text-english-lavender;
-}
-
-*::-webkit-scrollbar-track {
-   @apply bg-old-lavender rounded-none;
-}
-
-*::-webkit-scrollbar {
-   @apply w-1 md:w-2 lg:w-2.5;
-}
-
-*::-webkit-scrollbar-thumb {
-   @apply bg-english-lavender  rounded-none;
+   @apply inline-block cursor-pointer select-none hover:text-english-lavender;
 }
 
 .text-btn {
-   @apply inline-block cursor-pointer select-none
-    transition-all duration-300 ease-in-out
-    hover:text-english-lavender;
+   @apply inline-block cursor-pointer select-none hover:text-english-lavender;
+}
+
+.colors-300 {
+   @apply transition-colors ease-in-out duration-300;
+}
+
+.opacity-300 {
+   @apply transition-opacity ease-in-out duration-300;
+}
+
+.transform-300 {
+   @apply transition-transform ease-in-out duration-300;
+}
+
+.all-300 {
+   @apply transition-all ease-in-out duration-300;
 }
