feat: :sparkles: Logo animation, table, page transition, etc.
Signed-off-by: Rubén Conde <dev@rubn.xyz>

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -14,6 +14,10 @@
    @apply w-2 lg:w-2.5 h-2 lg:h-2.5;
 }
 
+.long-url::-webkit-scrollbar {
+   @apply w-1 lg:w-1.5 h-1 lg:h-1.5;
+}
+
 *::-webkit-scrollbar-thumb {
    @apply bg-english-lavender rounded-none;
 }
